# advent-of-code-2024

./: .editorconfig  README.md
cpp/: .editorconfig  CMakeLists.txt  CMakePresets.json  README.md
cpp/src/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  CMakeLists.txt  ints.hpp  utils.cpp  utils.hpp  vector2.hpp
cpp/src/6/: block.hpp  guard.cpp  guard.hpp  main.cpp  map.cpp  map.hpp
